<resources>
    <string name="app_name">KyselyApp</string>
    <string name="adding_a_question">Kysymyksen lisääminen</string>
    <string name="enter_question">Kirjoita kysymys</string>
    <string name="save">Tallenna</string>
    <string name="change_credentials">Vaihda kirjautumistiedot</string>
    <string name="new_username">Uusi käyttäjätunnus</string>
    <string name="new_password">Uusi salasana</string>
    <string name="retype_new_password">Kirjoita uusi salasana uudelleen</string>
    <string name="confirm">Vahvista</string>
    <string name="manage_survey1">Hallinnoi kyselyä 1</string>
    <string name="manage_survey2">Hallinnoi kyselyä 2</string>
    <string name="logout">Kirjaudu ulos</string>
    <string name="admin_login">Admin-kirjautuminen</string>
    <string name="username">Käyttäjätunnus</string>
    <string name="password">Salasana</string>
    <string name="login">Kirjaudu sisään</string>
    <string name="editing_question">Kysymyksen muokkaus</string>
    <string name="edit_question">Muokkaa kysymystä</string>
    <string name="update">Päivitä</string>
    <string name="survey1">Kysely 1</string>
    <string name="survey2">Kysely 2</string>
    <string name="add">Lisää</string>
    <string name="edit">Muokkaa</string>
    <string name="delete">Poista</string>
    <string name="export">Vie</string>
    <string name="show_answers">Näytä vastaukset</string>
    <string name="delete_all_answers_for_survey1">Poista kaikki vastaukset kyselystä 1</string>
    <string name="delete_all_answers_for_survey2">Poista kaikki vastaukset kyselystä 2</string>
    <string name="bar_chart">Pylväsdiagrammi</string>
    <string name="show_absolute_values">Näytä absoluuttiset arvot</string>
    <string name="place_holder_question">place holder kysymys</string>
    <string name="text_to_speech_button_for_questions">Tekstistä puheeksi -painike kysymyksiin</string>
    <string name="previous">Edellinen</string>
    <string name="next">Seuraava</string>
    <string name="write_your_answer_here">Kirjoita vastauksesi tähän</string>
    <string name="thank_you_for_answering">Kiitos vastauksestasi!</string>
    <string name="ok">OK</string>
    <string name="question">Kysymys</string>
    <string name="question_added_successfully">Kysymys lisätty onnistuneesti</string>
    <string name="please_enter_a_question">Kirjoita kysymys</string>
    <string name="confirmation">Vahvistus</string>
    <string name="Are_you_sure_you_want_to_change_the_credentials">Oletko varma, että haluat vaihtaa tunnistetiedot? Tätä toimintoa ei voi peruuttaa.</string>
    <string name="success">Onnistui</string>
    <string name="credentials_updated">Tunnistetiedot päivitetty</string>
    <string name="error">Virhe</string>
    <string name="passwords_do_not_match">Salasanat eivät täsmää</string>
    <string name="all_fields_must_be_filled">Kaikki kentät on täytettävä</string>
    <string name="invalid_username_or_password">Virheellinen käyttäjätunnus tai salasana</string>
    <string name="question_updated_successfully">Kysymys päivitetty onnistuneesti</string>
    <string name="the_question_has_not_changed">Kysymys ei ole muuttunut</string>
    <string name="no_answers_to_export">Ei vastauksia viennille</string>
    <string name="error_exporting_answers">Virhe vastausten viennissä: </string>
    <string name="answers_exported_to">Vastaukset viety kohteeseen </string>
    <string name="please_select_a_question_to_edit">Valitse kysymys muokattavaksi</string>
    <string name="delete_question">Poista kysymys</string>
    <string name="are_you_sure_you_want_to_delete_this_question_and_its_answers">Oletko varma, että haluat poistaa tämän kysymyksen ja siihen liittyvät vastaukset?</string>
    <string name="yes">Kyllä</string>
    <string name="no">Ei</string>
    <string name="please_select_a_question_to_delete">Valitse kysymys poistettavaksi</string>
    <string name="delete_all_answers">Poista kaikki vastaukset</string>
    <string name="are_you_sure_you_want_to_delete_all_answers_for_this_survey">Oletko varma, että haluat poistaa kaikki vastaukset tähän kyselyyn?</string>
    <string name="please_select_a_question_to_see_answers">Valitse kysymys nähdäksesi vastaukset</string>
    <string name="error_loading_questions">Virhe ladatessa kysymyksiä</string>
    <string name="answer_cannot_be_empty">Vastaus ei voi olla tyhjä</string>
    <string name="no_answers_for">Ei vastauksia kohteelle \"</string>
    <string name="submit">Lähetä</string>
    <string name="backup_data">Varmuuskopio</string>
    <string name="restore_from_backup">Palauta varmuuskopiosta</string>
    <string name="backup_data_saved">Varmuuskopio tallennettu: </string>
    <string name="backup_data_save_failed">Varmuuskopionti epäonnistui: </string>
    <string name="no_file_selected">Tiedostoa ei ole valittu</string>
    <string name="data_imported_successfully">Varmuuskopio palautettu onnistuneesti</string>
    <string name="data_import_failed">Varmuuskopion palautettus epäonnistui</string>
</resources>