<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ManageSurvey1Activity">

    <TextView
        android:id="@+id/changeSurveyTitle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:textColor="#DE3789"
        android:textSize="24dp"
        android:textStyle="bold"
        android:text="@string/survey2"
        android:gravity="center"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/question_list_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/addQuestionButton"
            style="@style/AppTheme.Button1"
            android:text="@string/add" />

        <Button
            android:id="@+id/editQuestionButton"
            style="@style/AppTheme.Button1"
            android:text="@string/edit" />

        <Button
            android:id="@+id/deleteQuestionButton"
            style="@style/AppTheme.Button1"
            android:text="@string/delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:weightSum="3">

        <Button
            android:id="@+id/exportButton"
            style="@style/AppTheme.Button2"
            android:text="@string/export" />

        <Button
            android:id="@+id/showAnswersButton"
            style="@style/AppTheme.Button2"
            android:text="@string/show_answers" />

        <Button
            android:id="@+id/delete_survey2_answers_button"
            style="@style/AppTheme.Button2"
            android:text="@string/delete_all_answers_for_survey2" />

    </LinearLayout>

</LinearLayout>
