<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".AdminActivity">
    <TextView
        android:id="@+id/changeUsernameTitle"
        style="@style/AppTheme.Title"
        android:text="@string/change_credentials"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changeUsernameLayout"
        style="@style/AppTheme.TextInputLayout"
        android:hint="@string/new_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeUsernameTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changeUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changePasswordLayout"
        style="@style/AppTheme.TextInputLayout"
        android:hint="@string/new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeUsernameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/retypePasswordLayout"
        style="@style/AppTheme.TextInputLayout"
        android:hint="@string/retype_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/retypePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeCredentialsButton"
        style="@style/AppTheme.Button"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retypePasswordLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/manageSurvey1Button"
        style="@style/AppTheme.Button"
        android:text="@string/manage_survey1"
        app:layout_constraintTop_toBottomOf="@+id/changeCredentialsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/manageSurvey2Button"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/manageSurvey2Button"
        style="@style/AppTheme.Button"
        android:text="@string/manage_survey2"
        app:layout_constraintTop_toBottomOf="@+id/changeCredentialsButton"
        app:layout_constraintStart_toEndOf="@id/manageSurvey1Button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="42dp"
        android:layout_marginStart="8dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/exportButton"
        android:text="@string/backup_data"
        style="@style/AppTheme.Button"
        app:layout_constraintTop_toBottomOf="@id/manageSurvey2Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/importButton"
        android:layout_marginEnd="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/importButton"
        android:text="@string/restore_from_backup"
        style="@style/AppTheme.Button"
        app:layout_constraintTop_toBottomOf="@id/manageSurvey2Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exportButton"
        android:layout_marginStart="8dp"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        style="@style/AppTheme.Button"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
